--- a/src/components/ErrorModal.module.css
+++ b/src/components/ErrorModal.module.css
@@ -5,21 +5,22 @@
   width: 100%;
   height: 100vh;
   z-index: 10;
-  background: rgba(248, 197, 197, 0.75);
+  background: rgba(241, 241, 241, 0.75);
 }
 
 .modal {
   position: fixed;
   top: 30vh;
-  left: 10%;
-  width: 80%;
+  left: 25%;
+  width: 50%;
   z-index: 100;
   overflow: hidden;
 }
 
 .title {
-  background: #dfa5a5;
-  padding: 1rem;
+  background: #000000;
+  color: #fff;
+  padding: 10px;
 }
 
 .title h1 {
